# pygatsby

./: .envrc  .gitignore  ai.py  embeddings.py  main.py  pyproject.toml  tdb.py  vdb.py
prompts/: gatsby.yaml
